Додав нові позиції в меню

--- a/index.html
+++ b/index.html
@@ -1,185 +1,100 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Меню для телефона</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Century Gothic', Helvetica, sans-serif;
-      background: url('images/background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #333;
-      padding: 1rem;
-      min-height: 100vh;
-      /* Для кращого контрасту тексту на фоні */
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-      animation: fadeInDown 0.8s ease;
-    }
-
-    header h1 {
-      font-family: 'Century Gothic', Helvetica, sans-serif;
-      font-size: 2.6rem;
-      color: #fff;
-      background: rgba(0, 0, 0, 0.3);
-      padding: 0.6rem 1.5rem;
-      border-radius: 18px;
-      backdrop-filter: blur(6px);
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
-      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
-      letter-spacing: 1px;
-      display: inline-block;
-      animation: slideIn 1s ease-out;
-      text-align: center;
-    }
-
-    .menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-    }
-
-    .card {
-      background: rgba(255 255 255 / 0.9);
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: fadeInUp 0.6s ease forwards;
-      transform: translateY(30px);
-      opacity: 0;
-      cursor: pointer;
-    }
-
-    /* Анімація при наведенні/дотику */
-    .card:hover, .card:focus {
-      transform: scale(1.05);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      outline: none;
-    }
-
-    .card img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-bottom: 1px solid #ddd;
-      /* Ледве помітний ефект */
-      transition: filter 0.3s ease;
-    }
-
-    .card img:hover {
-      filter: brightness(1.05);
-    }
-
-    .card-content {
-      padding: 1rem;
-    }
-
-    .card-content h2 {
-      font-size: 1.3rem;
-      margin-bottom: 0.5rem;
-      color: #222;
-      letter-spacing: 0.5px;
-    }
-
-    .card-content p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #444;
-      text-shadow: 0 0 3px rgba(255,255,255,0.8);
-    }
-
-    @keyframes fadeInUp {
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes slideIn {
-      from {
-        opacity: 0;
-        transform: translateX(-50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-
-    /* Для великих екранів */
-    @media (min-width: 600px) {
-      .menu {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      .card {
-        width: 300px;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Кулинарное Искусство</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Кав'ярня 31/1</h1>
-  </header>
+    <header>
+        <nav class="main-nav"> {/* Добавлен класс для удобства */}
+            <div class="logo">Кулинарное Искусство</div>
+            <button class="mobile-nav-toggle" aria-label="Открыть меню" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <ul class="nav-links" data-visible="false">
+                <li><a href="#hero">Главная</a></li>
+                <li><a href="#recipes">Рецепты</a></li>
+                <li><a href="#gallery">Галерея</a></li>
+                <li><a href="#about">О нас</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="menu">
-    <div class="card" tabindex="0">
-      <img src="images/pirog.jpg" alt="Пиріг з овочами" loading="lazy" />
-      <div class="card-content">
-        <h2>ПИРІГ З ОВОЧАМИ</h2>
-        <p>Склад: Тісто листкове дріжджове, яйця, борошно, масло вершкове, мікс овочів, вершки, сіль, сир моцарела, сир гауда.<br><b>Ціна: 155 грн<br>Маса нетто: 280 г</b></p>
-      </div>
-    </div>
+    <main>
+        <section id="hero" style="background-image: url('images/background.jpg');">
+            <div class="hero-content">
+                <h1>Откройте Мир Вкуса</h1>
+                <p>Эксклюзивные рецепты для истинных гурманов.</p>
+                <a href="#recipes" class="cta-button">Наши Шедевры</a>
+            </div>
+        </section>
 
-    <div class="card" tabindex="0">
-      <img src="images/pure.jpg" alt="Соковита котлета по-полтавськи" loading="lazy" />
-      <div class="card-content">
-        <h2>СОКОВИТА КОТЛЕТА ПО-ПОЛТАВСЬКИ З ВЕРШКОВОЮ ТОВЧАНКОЮ</h2>
-        <p>Склад: філе куряче, сіль, перець, яйця курячі, масло вершкове, кріп, борошно, сухарі Панко, картопля, молоко, вершки.<br><b>Ціна: 195 грн<br>Маса нетто: 280 г</b></p>
-      </div>
-    </div>
+        <section id="recipes" class="container">
+            <h2>Авторские Рецепты</h2>
+            <div class="recipe-grid">
+                <div class="recipe-card" data-index="0">
+                    <img src="images/pirog.jpg" alt="Домашние пироги">
+                    <div class="recipe-card-content">
+                        <h3>Золотистые Пироги</h3>
+                        <p>Ароматные и сытные пироги, хранящие тепло домашнего очага.</p>
+                        <a href="#" class="recipe-link">Узнать рецепт</a>
+                    </div>
+                </div>
+                <div class="recipe-card" data-index="1">
+                    <img src="images/sirniki.jpg" alt="Нежные сырники">
+                    <div class="recipe-card-content">
+                        <h3>Воздушные Сырники</h3>
+                        <p>Непревзойденно нежные сырники, тающие во рту с первой ложки.</p>
+                        <a href="#" class="recipe-link">Узнать рецепт</a>
+                    </div>
+                </div>
+                <div class="recipe-card" data-index="2">
+                    <img src="images/pure.jpg" alt="Картофельное пюре">
+                    <div class="recipe-card-content">
+                        <h3>Бархатное Пюре</h3>
+                        <p>Классическое пюре, доведенное до совершенства вкуса и текстуры.</p>
+                        <a href="#" class="recipe-link">Узнать рецепт</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <div class="card" tabindex="0">
-      <img src="images/sirniki.jpg" alt="Сирники" loading="lazy" />
-      <div class="card-content">
-        <h2>Сирники</h2>
-        <p>Склад: сир кисломолочний, борошно пшеничне, цукор білий, яйця курячі, цукор ванільний, олія соняшникова, грецький горіх, ягоди сезонні.<br><b>Ціна: 195 грн<br>Маса нетто: 240 г</b></p>
-      </div>
-    </div>
-  </div>
+        <section id="gallery" class="container">
+            <h2>Галерея Вкуса</h2>
+            <p>Визуальное наслаждение кулинарными творениями и моментами вдохновения.</p>
+            <div class="gallery-grid">
+                <div class="gallery-item" data-index="0"><img src="images/fon1.jpg" alt="Вдохновение 1"></div>
+                <div class="gallery-item" data-index="1"><img src="images/fon2.jpg" alt="Вдохновение 2"></div>
+                <div class="gallery-item" data-index="2"><img src="images/fon3.jpg" alt="Вдохновение 3"></div>
+                <div class="gallery-item" data-index="3"><img src="images/fon4.jpg" alt="Вдохновение 4"></div>
+                <div class="gallery-item" data-index="4"><img src="images/fon5.jpg" alt="Вдохновение 5"></div>
+                <div class="gallery-item" data-index="5"><img src="images/fon6.jpg" alt="Вдохновение 6"></div>
+                <div class="gallery-item" data-index="6"><img src="images/fon7.jpg" alt="Вдохновение 7"></div>
+                <div class="gallery-item" data-index="7"><img src="images/fon8.jpg" alt="Вдохновение 8"></div>
+                <div class="gallery-item" data-index="8"><img src="images/fon9.jpg" alt="Вдохновение 9"></div>
+            </div>
+        </section>
 
-  <script>
-    // Анімація появи з невеликим затримками
-    document.querySelectorAll('.card').forEach((card, i) => {
-      card.style.animationDelay = `${i * 0.2}s`;
-    });
-  </script>
+        <section id="about" class="container">
+            <h2>Наша Философия</h2>
+            <div class="about-content">
+                <p>Мы верим, что приготовление пищи — это искусство, способное дарить радость и объединять людей. Каждый рецепт на этом сайте создан с душой и проверен временем, чтобы вы могли наслаждаться каждым кусочком.</p>
+                <p>Присоединяйтесь к нашему гастрономическому путешествию и открывайте новые грани вкуса!</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Кулинарное Искусство. Все права защищены.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
