--- a/index.html
+++ b/index.html
@@ -175,6 +175,24 @@
     </div>
   </div>
 
+  <div class="card" tabindex="0">
+      <img src="images/pirog_kurka.jpg" alt="Пиріг курка, гриби та сливи" loading="lazy" />
+      <div class="card-content">
+        <h2>Сирники</h2>
+        <p>Склад: стегно-гриль куряче, мікс грибів, томлена цибуля, чорнослив в'ялений, грибний хумус, мікс сирів, кракелін сирний, спеціх, тісто хрумке.<br><b>Ціна: 155 грн<br>Маса нетто: 190 г</b></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card" tabindex="0">
+      <img src="images/tefteli.jpg" alt="Січеники з картоплею по-домашньому" loading="lazy" />
+      <div class="card-content">
+        <h2>Сирники</h2>
+        <p>Склад: фарш асорті (свинина, яловичина, філе куряче, сало), цибуля ріпчаста, батон, молоко, яйця, сіль, перець, борошно пшеничне, олія рослинна, картопля рожева, буряк червоний, часник мелений, сік лимону.<br><b>Ціна: 195 грн<br>Маса нетто: 300 г</b></p>
+      </div>
+    </div>
+  </div>
+
   <script>
     // Анімація появи з невеликим затримками
     document.querySelectorAll('.card').forEach((card, i) => {
