--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Century Gothic', Helvetica, sans-serif;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      background: url('images/fon2.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #333;
       padding: 1rem;
@@ -159,12 +159,30 @@
     </div>
 
     <div class="card" tabindex="0">
+      <img src="images/pirog_kurka.jpg" alt="Пиріг курка, гриби та сливи" loading="lazy" />
+      <div class="card-content">
+        <h2>ПИРІГ КУРКА, ГРИБИ ТА СЛИВИ</h2>
+        <p>Склад: стегно-гриль куряче, мікс грибів, томлена цибуля, чорнослив в'ялений, грибний хумус, мікс сирів, кракелін сирний, спеціх, тісто хрумке.<br><b>Ціна: 155 грн<br>Маса нетто: 190 г</b></p>
+      </div>
+    </div>
+  </div>
+
+    <div class="card" tabindex="0">
       <img src="images/pure.jpg" alt="Соковита котлета по-полтавськи" loading="lazy" />
       <div class="card-content">
         <h2>СОКОВИТА КОТЛЕТА ПО-ПОЛТАВСЬКИ З ВЕРШКОВОЮ ТОВЧАНКОЮ</h2>
         <p>Склад: філе куряче, сіль, перець, яйця курячі, масло вершкове, кріп, борошно, сухарі Панко, картопля, молоко, вершки.<br><b>Ціна: 195 грн<br>Маса нетто: 280 г</b></p>
       </div>
     </div>
+
+    <div class="card" tabindex="0">
+      <img src="images/tefteli.jpg" alt="Січеники з картоплею по-домашньому" loading="lazy" />
+      <div class="card-content">
+        <h2>СІЧЕНИКИ З КАРТОПЛЕЮ ПО-ДОМАШНЬОМУ</h2>
+        <p>Склад: фарш асорті (свинина, яловичина, філе куряче, сало), цибуля ріпчаста, батон, молоко, яйця, сіль, перець, борошно пшеничне, олія рослинна, картопля рожева, буряк червоний, часник мелений, сік лимону.<br><b>Ціна: 195 грн<br>Маса нетто: 300 г</b></p>
+      </div>
+    </div>
+  </div>
 
     <div class="card" tabindex="0">
       <img src="images/sirniki.jpg" alt="Сирники" loading="lazy" />
@@ -175,23 +193,7 @@
     </div>
   </div>
 
-  <div class="card" tabindex="0">
-      <img src="images/pirog_kurka.jpg" alt="Пиріг курка, гриби та сливи" loading="lazy" />
-      <div class="card-content">
-        <h2>Сирники</h2>
-        <p>Склад: стегно-гриль куряче, мікс грибів, томлена цибуля, чорнослив в'ялений, грибний хумус, мікс сирів, кракелін сирний, спеціх, тісто хрумке.<br><b>Ціна: 155 грн<br>Маса нетто: 190 г</b></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="card" tabindex="0">
-      <img src="images/tefteli.jpg" alt="Січеники з картоплею по-домашньому" loading="lazy" />
-      <div class="card-content">
-        <h2>Сирники</h2>
-        <p>Склад: фарш асорті (свинина, яловичина, філе куряче, сало), цибуля ріпчаста, батон, молоко, яйця, сіль, перець, борошно пшеничне, олія рослинна, картопля рожева, буряк червоний, часник мелений, сік лимону.<br><b>Ціна: 195 грн<br>Маса нетто: 300 г</b></p>
-      </div>
-    </div>
-  </div>
+  
 
   <script>
     // Анімація появи з невеликим затримками
