--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
         <p>Склад: стегно-гриль куряче, мікс грибів, томлена цибуля, чорнослив в'ялений, грибний хумус, мікс сирів, кракелін сирний, спеціх, тісто хрумке.<br><b>Ціна: 155 грн<br>Маса нетто: 190 г</b></p>
       </div>
     </div>
-  </div>
 
     <div class="card" tabindex="0">
       <img src="images/pure.jpg" alt="Соковита котлета по-полтавськи" loading="lazy" />
@@ -182,7 +181,6 @@
         <p>Склад: фарш асорті (свинина, яловичина, філе куряче, сало), цибуля ріпчаста, батон, молоко, яйця, сіль, перець, борошно пшеничне, олія рослинна, картопля рожева, буряк червоний, часник мелений, сік лимону.<br><b>Ціна: 195 грн<br>Маса нетто: 300 г</b></p>
       </div>
     </div>
-  </div>
 
     <div class="card" tabindex="0">
       <img src="images/sirniki.jpg" alt="Сирники" loading="lazy" />
@@ -191,9 +189,7 @@
         <p>Склад: сир кисломолочний, борошно пшеничне, цукор білий, яйця курячі, цукор ванільний, олія соняшникова, грецький горіх, ягоди сезонні.<br><b>Ціна: 195 грн<br>Маса нетто: 240 г</b></p>
       </div>
     </div>
-  </div>
-
-  
+  </div> <!-- Тільки один закриваючий тег для .menu -->
 
   <script>
     // Анімація появи з невеликим затримками
